feat: fix a couple of formatting niggles

--- a/sample-workflow.yml
+++ b/sample-workflow.yml
@@ -1,6 +1,6 @@
 # GitHub Actions workflow for Baler (BAd Link reportER) version 0.0.1.
 # This is available as the file "sample-workflow.yml" from the source
-# repository for Baler at https://github.com/caltechlibrary/baler/.
+# code repository for Baler: https://github.com/caltechlibrary/baler/.
 
 name: "Bad Link Reporter"
 
@@ -9,8 +9,10 @@ name: "Bad Link Reporter"
 env:
   # Files examined by the workflow:
   files: '*.md'
+
   # Optional file containing a list of URLs to ignore, one per line:
   ignore: '.github/workflows/ignored-urls.txt'
+
   # Label assigned to issues created by this workflow:
   labels: 'bug'
 
