fix: change testing package source to real one

--- a/.github/workflows/bad-link-reporter.yml
+++ b/.github/workflows/bad-link-reporter.yml
@@ -39,7 +39,7 @@ jobs:
     name: Run Bad Link Reporter
     runs-on: ubuntu-latest
     steps:
-      - uses: mhucka/baler@main
+      - uses: caltechlibrary/baler@main
         with:
           files:  ${{github.event.inputs.files  || env.files}}
           labels: ${{github.event.inputs.labels || env.labels}}
