--- a/.github/workflows/iga.yml
+++ b/.github/workflows/iga.yml
@@ -10,7 +10,7 @@ env:
   INVENIO_SERVER: https://data.caltech.edu
 
   # Set to an InvenioRDM record ID to mark release as a new version.
-  parent_record: none
+  parent_record: kyxhk-bpa60
 
   # The variables below are other IGA options. Please see the docs.
   community:     none
