--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -8,9 +8,13 @@ run-name: Lint Markdown files after ${{github.event_name}} by ${{github.actor}}
 
 on:
   push:
+    branches:
+      - main
     paths:
       - '*.md'
   pull_request:
+    branches:
+      - main
     paths:
       - '*.md'
   workflow_dispatch:
