fix: workflow needs GHA permissions for writing issues

--- a/sample-workflow.yml
+++ b/sample-workflow.yml
@@ -35,6 +35,8 @@ jobs:
   run-baler:
     name: Run Bad Link Reporter
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - uses: caltechlibrary/baler@main
         with:
