--- a/.github/workflows/bad-link-reporter.yml
+++ b/.github/workflows/bad-link-reporter.yml
@@ -49,6 +49,8 @@ jobs:
   run-baler:
     name: Run Bad Link Reporter
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - uses: caltechlibrary/baler@main
         with:
